0.03
 - Fix examples in doc.
 - Update copyright years.

0.02 2023-11-20T14:09:54+01:00
 - Add support of ANSI color output.

0.01 2023-11-19T21:07:25+01:00
 - First version.