@@ -1,4 +1,5 @@
 0.03
+ - Add test for processing of leader.
  - Fix examples in doc.
  - Update copyright years.
 
